fix: Add environment secrets to integration tests workflow
- Add environment: n8n-mcp-multi-tanant-n8n to integration-tests job
  to access N8N_API_URL, N8N_API_KEY, and test config secrets
- Remove continue-on-error since credentials are now available

Conceived by Romuald Członkowski - www.aiadvisors.pl/en

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,13 @@ jobs:
   integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
+    environment: n8n-mcp-multi-tanant-n8n
+
+    env:
+      N8N_API_URL: ${{ secrets.N8N_API_URL }}
+      N8N_API_KEY: ${{ secrets.N8N_API_KEY }}
+      N8N_TEST_CLEANUP_ENABLED: ${{ secrets.N8N_TEST_CLEANUP_ENABLED }}
+      N8N_TEST_TAG: ${{ secrets.N8N_TEST_TAG }}
 
     steps:
       - name: Checkout code
@@ -53,7 +60,6 @@ jobs:
 
       - name: Run integration tests
         run: npm run test:integration
-        continue-on-error: true  # Integration tests may require external services
 
   coverage-report:
     name: Generate Coverage Report
