fix: Add timeout and teardown to integration tests in CI
- Add timeout-minutes: 15 to prevent indefinite hanging
- Add --teardownTimeout 5000 to force vitest to exit after tests

Conceived by Romuald Członkowski - www.aiadvisors.pl/en

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,8 @@ jobs:
         run: npm run build
 
       - name: Run integration tests
-        run: npm run test:integration
+        run: npm run test:integration -- --teardownTimeout 5000
+        timeout-minutes: 15
 
   coverage-report:
     name: Generate Coverage Report
